<resources>
    <string name="app_name">Friend Compass</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="tracking_enabled_notif">Tracking is currently enabled</string>
    <string name="gps_not_enabled">GPS is not enabled on your device. Enable it in the location settings.</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="stopped_sharing">User stopped sharing location</string>
    <string name="no_support">Your device does not support the compass</string>
    <string name="close">Close</string>
    <string name="request_sent">Friend Request Sent!</string>
    <string name="failed_add">Failed To Add Friend</string>
    <string name="email_no_exist">Email Does Not Exist</string>
    <string name="greeting">Hello %1$s</string>
    <string name="enable_location">Please allow GPS tracking to broadcast your location</string>
    <string name="tracking_enabled">GPS Tracking Enabled</string>
    <string name="login_failed">Login Failed</string>
    <string name="register_failed">Register Failed</string>
    <string name="accepted">Accepted</string>
    <string name="pending">Pending</string>
    <string name="friends">Friends</string>
    <string name="requests">Requests</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password_match">Passwords must match</string>
</resources>