<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".activities.MainActivity" android:id="@+id/mainConstraintLayout">

    <EditText
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editUsernameLogin"
            android:hint="@string/email"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:inputType="textEmailAddress"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editPasswordLogin"
            android:hint="@string/password"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/editUsernameLogin"/>
    <Button
            android:text="@string/login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/btnLogin"
            android:layout_marginTop="80dp" app:layout_constraintTop_toBottomOf="@+id/editPasswordLogin"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>