<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.HomeActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".activities.HomeActivity">

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/txtFriend" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
                    app:layout_constraintTop_toTopOf="parent" android:inputType="textEmailAddress"
                    android:hint="@string/email" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/btnAdd"/>
            <TextView
                    android:text="@string/friends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtFriend" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:textSize="24sp" android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/requests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:textSize="24sp" android:textColor="@android:color/black"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerFriends"
                    app:layout_constraintVertical_chainStyle="packed" android:layout_marginTop="8dp"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/recyclerFriends"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/recyclerFriendRequests"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            >
            </androidx.recyclerview.widget.RecyclerView>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/add_friend"
                    android:id="@+id/btnAdd" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>